08-webapp-deployment-gateway-api/01-static-web-app-deployment.yaml
# Copyright 2021 DoiT International.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

#
# --
# @spec: https://kubernetes.io/docs/reference/kubernetes-api/workload-resources/deployment-v1/
#
# @info: Here we create a static nginx web app to be exposed by our Gateway
# --
#
apiVersion: apps/v1
kind: Deployment
metadata:
  name: static-web-app-deployment
  namespace: doit-lab-08
  labels:
    k8s-app: static-web-app
    k8s-scope: gke-ws-doit-lab-08
spec:
  replicas: 3
  selector:
    matchLabels:
      k8s-app: static-web-app
  template:
    metadata:
      labels:
        k8s-app: static-web-app
        k8s-scope: gke-ws-doit-lab-08
    spec:
      containers:
        - name: static-web-app
          image: nginx:alpine
          ports:
            - name: http-80
              containerPort: 80
              protocol: TCP
