08-webapp-deployment-gateway-api/10-static-web-app-gateway.yaml
# Copyright 2021 DoiT International.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

#
# --
# @spec: https://gateway-api.sigs.k8s.io/references/spec/#gateway.networking.k8s.io/v1beta1.Gateway
# @info: https://gateway-api.sigs.k8s.io/api-types/gateway/
#        https://cloud.google.com/kubernetes-engine/docs/concepts/gateway-api
#
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: static-web-app-gateway
  namespace: doit-lab-08
  labels:
    k8s-app: static-web-app
    k8s-scope: gke-ws-doit-lab-08
spec:
  # This gatewayClass will create a Global external Application Load Balancer. See all options here:
  # https://cloud.google.com/kubernetes-engine/docs/concepts/gateway-api#gatewayclass
  gatewayClassName: gke-l7-global-external-managed
  listeners:
    - name: http
      protocol: HTTP
      port: 80
