08-webapp-deployment-gateway-api/20-static-web-app-httproute.yaml
# Copyright 2021 DoiT International.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

#
# --
# @spec: https://gateway-api.sigs.k8s.io/references/spec/#gateway.networking.k8s.io/v1beta1.HTTPRoute
# @info: https://gateway-api.sigs.k8s.io/api-types/httproute/
#        https://cloud.google.com/kubernetes-engine/docs/concepts/gateway-api
#
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1beta1
metadata:
  name: static-web-app-httproute
  namespace: doit-lab-08
spec:
  parentRefs:
    - kind: Gateway
      name: static-web-app-gateway
  rules:
    - backendRefs:
        - name: static-web-app-service
          port: 8080
